--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,12 +2,14 @@ FROM ubuntu:20.04
 
 RUN apt-get update -y && \
     apt-get install -y python3-pip python3-dev git && \
-    apt-get install -y ca-certificates curl gnupg lsb-release && \
-    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg && \
-    echo \
-    "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
-    $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
-    apt-get install docker-ce-cli
+    apt-get install -y curl && \
+    curl https://get.docker.com/builds/Linux/x86_64/docker-latest.tgz | tar xvz -C /tmp/ && mv /tmp/docker/docker /usr/bin/docker
+    # apt-get install -y ca-certificates curl gnupg lsb-release && \
+    # curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg && \
+    # echo \
+    # "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+    # $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
+    # apt-get install docker-ce-cli
 
 RUN git clone https://github.com/hysds/otello.git && \
     cd otello && \
