Git clone of unity-sps-register_job moved into terraform

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,7 +16,7 @@ RUN git clone https://github.com/hysds/otello.git && \
     git checkout unity-dev && \
     pip install -e .
 
-RUN git clone -b MCP_TEST https://github.com/unity-sds/unity-sps-register_job.git
+# RUN git clone -b MCP_TEST https://github.com/unity-sds/unity-sps-register_job.git
 # RUN git clone -b deploy-process https://github.com/drewm-jpl/unity-sps-register_job.git
 
 WORKDIR /flask_ades_wpst
